fixed cell alignment for bencharks and removed text formatting options that are not available cross-browser

--- a/public/sys/css/styles.css
+++ b/public/sys/css/styles.css
@@ -294,6 +294,11 @@ ef {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
     /* height: 160px; */
+    /* border-top: 1px solid #b2b2b2; */
+    /* border-left: 1px solid #b2b2b2; */
+    /* border-top-left-radius: 5px; */
+    overflow: hidden;
+    /* border-top-right-radius: 0px; */
 }
 
 .acode-picker-overall input {
@@ -303,8 +308,9 @@ ef {
 .acode-picker-overall label {
     width: 145.5px;
     text-align: center;
+    padding-top: 0px;
     cursor: pointer;
-    border-left: 1px solid #b2b2b2;
+    border-left: 2px solid #b2b2b2;
     margin: auto;
     margin-left: -5px;
     height: 50px;
@@ -314,7 +320,7 @@ ef {
     font-size: 16px;
     color: #666666;
     vertical-align: top;
-    border-bottom: 1px solid #b2b2b2;
+    border-bottom: 2px solid #b2b2b2;
 }
 
 .acode-picker-overall-title {
@@ -325,6 +331,7 @@ ef {
     padding-left: 20px;
     color: #fff;
     cursor: default;
+    border-top: none;
 }
 
 .acode-picker-wrapper {
@@ -335,7 +342,7 @@ ef {
     margin-right: -1px;
     /* background: red; */
     position: relative;
-    border-right: 1px solid #b2b2b2;
+    border-right: 2px solid #b2b2b2;
     left: 0px;
     width: 148px;
     border-bottom-right-radius: 5px;
@@ -356,7 +363,8 @@ ef {
     position: relative;
     z-index: 10;
     line-height: 46px;
-    padding-left: 0.8px;
+    padding-left: 2px;
+    padding-top: 0px;
 }
 
 
@@ -375,22 +383,27 @@ ef {
 }
 
 .acode-picker-alignment {
-    display: inline-block;
+    padding-top: 5px;
     margin-left: -1px;
     width: 146px;
     padding-bottom: 0;
-    height: 185px;
-    display: inline-table;
     text-align: center;
+    vertical-align: top;
+    padding: 10px;
+    border: 2px solid #b2b2b2;
+    cursor: pointer;
+    position: relative;
+    vertical-align: middle;
 }
 
 .acode-picker-alignment:first-child {
     margin-left: 0;
+    /* border-left: none; */
 }
 
 .acode-picker-alignment input:checked + label {
     border-color: #7ac943;
-    position: relative;
+    /* position: relative; */
     z-index: 10;
     border-width: 2px;
     padding-top: 9px;
@@ -406,7 +419,7 @@ ef {
 }
 
 .acode-picker-rational-box {
-    border: 1px solid #b2b2b2;
+    border: 2px solid #b2b2b2;
     min-height: 165px;
     border-radius: 5px;
     width: 100%;
@@ -438,10 +451,14 @@ ef {
 }
 
 .acode-picker-column .acode-picker-alignment-wrapper {
-	margin-top: -1px;
+	/* margin-top: -1px; */
 	display: table;
-	height: auto;
-	margin-bottom: -43px;
+	/* height: auto; */
+	/* margin-bottom: -43px; */
+	/* border-top: 1px solid #b2b2b2; */
+	/* border-left: 1px solid #b2b2b2; */
+	/* border-radius: 5px; */
+	/* overflow: hidden; */
 }
 
 .acode-picker-column .acode-picker-alignment-wrapper:first-child .acode-picker-alignment:first-child label {
@@ -463,18 +480,20 @@ ef {
     background-color: #e6e6e6;
     font-size: 17px;
     padding-left: 17px;
-    border: 1px solid #b2b2b2;
+    border: 2px solid #b2b2b2;
     /* margin-top: -1px; */
     border-bottom: none;
     /* border-top-left-radius: 5px; */
     text-transform: uppercase;
     /* border-top-right-radius: 5px; */
     cursor: default;
+    border-top: none;
 }
 
 .acode-picker-alignment-title:first-child {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    border-top: 2px solid #b2b2b2;
 }
 
 .acode-benchmark-h4-bold {
@@ -808,10 +827,6 @@ input:checked + .acode-team-consolidation-score-box {
     font-size: 18px;
 }
 
-.acode-benchmark-report-wrapper {}
-
-div {}
-
 .acode-report-institute-title {
     font-size: 11px;
     font-weight: 700;
@@ -999,4 +1014,30 @@ td.acode-benchmark-report-results.acode-no-data {
 .acode-benchmark-report-title {
     padding: 10px;
     padding-top: 0;
+}
+
+.green-border {
+    border: 2px solid #7ac943;
+    position: relative;
+    /* top: 3px; */
+    z-index: 9999;
+}
+
+td.acode-picker-alignment {}
+
+.acode-picker-alignment.green-border-left {
+    border-right-color: #7AC943;
+}
+
+.pen {
+    -webkit-user-select: text !important;
+    -moz-user-select:  text !important;
+    -ms-user-select: text !important;
+    user-selct:  text !important;
+    overflow: auto;
+}
+
+.acode-picker-overall input:checked + label + input + label {
+    border-left-color: transparent;
+    padding-top: 0px;
 }
